<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".activities.Ley" >

    <TextView
        android:id="@+id/articulo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/Articulo1" />

    <TextView
        android:id="@+id/articulo10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/articulo9"
        android:layout_marginTop="16dp"
        android:text="@string/Articulo10" />

    <TextView
        android:id="@+id/articulo5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/articulo4"
        android:layout_marginTop="16dp"
        android:text="@string/Articulo5" />

    <TextView
        android:id="@+id/articulo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/articulo3"
        android:layout_marginTop="16dp"
        android:text="@string/Articulo4" />

    <TextView
        android:id="@+id/articulo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/articulo2"
        android:layout_marginTop="16dp"
        android:text="@string/Articulo3" />

    <TextView
        android:id="@+id/articulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/articulo6"
        android:layout_below="@+id/articulo1"
        android:layout_marginTop="16dp"
        android:text="@string/Articulo2" />

    <TextView
        android:id="@+id/articulo9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/articulo8"
        android:layout_marginTop="16dp"
        android:text="@string/Articulo9" />

    <TextView
        android:id="@+id/articulo8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/articulo7"
        android:layout_marginTop="16dp"
        android:text="@string/Articulo8" />

    <TextView
        android:id="@+id/articulo6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/articulo5"
        android:layout_marginTop="16dp"
        android:text="@string/Articulo6" />

    <TextView
        android:id="@+id/articulo7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/articulo6"
        android:layout_marginTop="16dp"
        android:text="@string/Articulo7" />

</RelativeLayout>